--- a/budgettrackapi/bin/src/main/resources/application.properties
+++ b/budgettrackapi/bin/src/main/resources/application.properties
@@ -13,8 +13,6 @@ spring.datasource.password=root
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
